[gd_scene load_steps=9 format=3 uid="uid://xk64ex5gvy0l"]

[ext_resource type="Script" path="res://scenes/advanced-options/JsonEdit.gd" id="1_aapdo"]
[ext_resource type="Texture2D" uid="uid://i6nt6wwqdq7s" path="res://assets/gui/result_buttons.png" id="2_w1fki"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cskex"]
atlas = ExtResource("2_w1fki")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbx5t"]
atlas = ExtResource("2_w1fki")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6gsm"]
atlas = ExtResource("2_w1fki")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yhre"]
atlas = ExtResource("2_w1fki")
region = Rect2(0, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7xwy"]
atlas = ExtResource("2_w1fki")
region = Rect2(64, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71bh"]
atlas = ExtResource("2_w1fki")
region = Rect2(32, 480, 32, 32)

[node name="JsonEdit" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_aapdo")

[node name="CodeEditor" type="CodeEdit" parent="."]
layout_mode = 2
text = "{
	\"background_color\": \"#ffffff\",
	\"delay\": 20,
	\"systems\":  [{
		\"translation\": [0,0],
		\"matrix\": [0.5, 0, 0, 0.5],
		\"color\": \"#000000\"}
	]
}"
caret_blink = true
code_completion_enabled = true

[node name="ReloadButton" type="TextureButton" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = SubResource("AtlasTexture_cskex")
texture_pressed = SubResource("AtlasTexture_pbx5t")
texture_hover = SubResource("AtlasTexture_j6gsm")

[node name="RoundButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = SubResource("AtlasTexture_5yhre")
texture_pressed = SubResource("AtlasTexture_d7xwy")
texture_hover = SubResource("AtlasTexture_e71bh")

[connection signal="pressed" from="ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="RoundButton" to="." method="_on_round_button_pressed"]
